--- a/src/app/layout/app/app.scss
+++ b/src/app/layout/app/app.scss
@@ -1,4 +1,25 @@
 .app {
-  font-size: 18px;
-  text-align: center;
+  display: flex;
+}
+
+.navigation {
+  min-width: 25rem;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li a {
+      display: block;
+      padding: 0.8rem;
+      transition: background 0.2s ease;
+      &:hover {
+        background: rgba(0, 0, 0, 0.5);
+      }
+    }
+  }
+}
+
+.content {
+  min-width: 39rem;
 }
