--- a/src/index/index.scss
+++ b/src/index/index.scss
@@ -1,6 +1,21 @@
+html {
+  font-size: 10px;
+}
 body {
   @import url('https://fonts.googleapis.com/css?family=Roboto');
   font-family: 'Roboto', sans-serif;
+  margin: 0;
+  font-size: 1.6rem;
+  color: #000;
+}
 
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3 {
   margin: 0;
 }
