added normalization and more cleanup

--- a/src/components/page/page.scss
+++ b/src/components/page/page.scss
@@ -1,6 +1,10 @@
 @import '../../style-configs/mixins/mixins.scss';
 
-.header {
+.page {
   @include flex;
   padding: 24rem;
+
+  &__title {
+    font-size: 30rem;
+  }
 }
