--- a/src/components/content/with-page/with-page.scss
+++ b/src/components/content/with-page/with-page.scss
@@ -1,4 +1,4 @@
-@import '../../style-configs/mixins/mixins.scss';
+@import '../../../style-configs/mixins/mixins.scss';
 
 .page {
   @include flex;
